2004-06-23  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix locking bugs
	
2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* No request allocation needed on inode and file release
	
2004-06-21  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix possible inode leak in userspace in case of unfinished
	lookup/mknod/mkdir/symlink/link operation.
	
2004-06-20  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix some races and cleanups in fuse_read_super()
	
2004-06-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Requests are allocated at open time
	
2004-06-03  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Build shared library as well as static (using libtool)

	* Change FUSE_MINOR_VERSION from 1 to 0.  I know it's illegal but
	there has not been a release with the previous minor number, and I
	hope nobody is using it for anything.

	* Change fuse_main(), so that default behavior is to go into
	background if mount is successful.  '-f' and '-d' options disable
	backgrounding.  This fixes the "Why does my FUSE daemon hang?"
	newbie complaint.

	* Cache ENOSYS (function not implemented) errors on *xattr, flush
	and fsync

	* Don't call getdir method from open() only from first readdir().
	Open is sometimes just used to store the current directory
	(e.g. find)
	
2004-05-18  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added flush() call
	
2004-05-04  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Extended attributes support for 2.4 (patch by Cody Pisto)
	
2004-04-20  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fixed parser with modversions (Mattias Wadman)
	
2004-04-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added mount option parser to 2.4 build
	
2004-04-13  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Replaced binary mount data with text options

	* Show FUSE specific mount options in /proc/mounts

	* Check in fuse.h whether _FILE_OFFSET_BITS is set to 64

2004-04-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Check some limits so userspace won't get too big requests
